🐛 Fix layout on iOS

--- a/src/ui/main.css
+++ b/src/ui/main.css
@@ -1,3 +1,7 @@
+body {
+	overflow: hidden;
+}
+
 .CircleButton {
 	--width: 50px;
 	height: var(--width);
